--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+	
 	<div>
-	<h1><a href="#">Nishtha Arora</a></h1>
-		
+		<h1><a href="#">Nishtha Arora</a></h1>
+	
 	<nav class="navbar navbar-default">
   	<div class="container-fluid">
-		<span><a href="#"></a>About</span>
-		<span><a href="#"></a>Portfolio</span>
-		<span><a href="#"></a>Contact</span>	
+		<span><a href="#">About</a></span>
+		<span><a href="#">Portfolio</a></span>
+		<span><a href="#">Contact</a></span>	
 	</div>
 	</nav>
 	</div>
 
-	<div id="heading">
-	<h2>About Me</h2>
-	<div>
+
+	<div id="body">
+		<h2>About Me</h2>
 
 			<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -30,8 +31,6 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
-		
-
 
 		<aside class="Connections">
 		<h3>connect with me</h3>
@@ -39,8 +38,9 @@
 			<img src="assets/images/linkedin.png" alt="LinkedIn">
 			<img src="assets/images/facebook.jpg" alt="Facebook">
 			
-
 		</aside>
+	</div>
+
 
 		<footer>
 			<p>
