adding contacts and portfolio

--- a/main-page.html
+++ b/main-page.html
@@ -11,8 +11,8 @@
 		<h1 class="name"><a href="#">Nishtha Arora</a></h1>
   	<div class="nav">
 		<a class="1" href="#">About</a>
-		<a class="2" href="#">Portfolio</a>
-		<a class="3" href="contact.html" target="_blank" title="contact">Contact</a>	
+		<a class="2" href="portfolio.html" title="Portfolio">Portfolio</a>
+		<a class="3" href="contact.html" title="contact">Contact</a>	
 	</div>
 	</header>
 
@@ -69,10 +69,10 @@
 		
 
 		<aside class="social">
-			<h3>connect with me</h3>
-			<img class="github-img" src="assets/images/newGitHub-Mark.png" alt="Github">
-			<img class="2" src="assets/images/linkedin.png" alt="LinkedIn">
-			<img class="3" src="assets/images/facebook.jpg" alt="Facebook">
+			<h3>Connect with Me</h3>
+			<img class = "social-network" src="assets/images/newGitHub-Mark.png" alt="Github">
+			<img class = "social-network" src="assets/images/linkedin.png" alt="LinkedIn">
+			<img class = "social-network" src="assets/images/facebook.jpg" alt="Facebook">
 
 		</aside>
 	
