--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
 	<header class="header">
 		<h1 class="name"><a href="#">Nishtha Arora</a></h1>
   	<div class="nav">
-		<a class="1" href="#">About</a>
-		<a class="2" href="#">Portfolio</a>
+		<a class="1" href="main-page.html" title="about me">About</a>
+		<a class="2" href="portfolio.html" title="Portfolio">Portfolio</a>
 		<a class="3" href="#">Contact</a>	
 	</div>
 	</header>
@@ -53,10 +53,10 @@
 		
 
 		<aside class="social">
-			<h3>connect with me</h3>
-			<img class="github-img" src="assets/images/newGitHub-Mark.png" alt="Github">
-			<img class="2" src="assets/images/linkedin.png" alt="LinkedIn">
-			<img class="3" src="assets/images/facebook.jpg" alt="Facebook">
+			<h3>Connect with Me</h3>
+			<img class = "social-network" src="assets/images/newGitHub-Mark.png" alt="Github">
+			<img class = "social-network" src="assets/images/linkedin.png" alt="LinkedIn">
+			<img class = "social-network" src="assets/images/facebook.jpg" alt="Facebook">
 
 		</aside>
 	
