--- a/portfolio.html
+++ b/portfolio.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>My First Homework</title>
-
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
-<body>
-	
-	<header class="header">
-		<h1 class="name"><a href="#">Nishtha Arora</a></h1>
-  	<div class="nav">
-		<a class="1" href="#">About</a>
-		<a class="2" href="#">Portfolio</a>
-		<a class="3" href="contact.html" target="_blank" title="contact">Contact</a>	
-	</div>
-	</header>
-
-	<div class="outer-box clearfix">
-
-		<div class="inner-box clearfix">
-	
-			<h2 class="bio">Portfolio</h2>
-			
-		
+	<head>
+		<title>My First Homework</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	</head>
+	<body>
+		<header class="header">
+			<h1 class="name"><a href="#">Nishtha Arora</a></h1>
+			<div class="nav">
+				<a class="1" href="main-page.html" title="about me">About</a>
+				<a class="2" href="#">Portfolio</a>
+				<a class="3" href="contact.html" title="contact">Contact</a>
+			</div>
+		</header>
+		<div class="outer-box clearfix">
+			<div class="inner-box clearfix">
+				<h2 class="bio">Portfolio</h2>
+				<section>
+					<div class="portfolio-wrapper">
+						<img class = "portfolio-image" src="assets/images/new1.jpg" target="_blank" alt="placeholder image">
+						<p class = "portfolio-text">hangman </p>
+					</div>
+					<div class="portfolio-wrapper">
+						<img class = "portfolio-image" src="assets/images/new2.jpg" target="_blank" alt="placeholder image">
+						<p class = "portfolio-text">hangman </p>
+					</div>
+					<div class="portfolio-wrapper">
+						<img class = "portfolio-image"  src="assets/images/new3.jpg" alt="placeholder image">
+						<p class = "portfolio-text">hangman </p>
+					</div>
+					<div class="portfolio-wrapper">
+						<img class = "portfolio-image"  src="assets/images/new4.jpg" alt="placeholder image">
+						<p class = "portfolio-text">hangman </p>
+					</div>
+					<div class="portfolio-wrapper">
+						<img class = "portfolio-image"  src="assets/images/new5.jpg" alt="placeholder image">
+						<p class = "portfolio-text">hangman </p>
+					</div>
+				</section>
+			</div>
+			<aside class="social">
+				<h3>Connect with Me</h3>
+				<img class = "social-network" src="assets/images/newGitHub-Mark.png" alt="Github">
+				<img class = "social-network" src="assets/images/linkedin.png" alt="LinkedIn">
+				<img class = "social-network" src="assets/images/facebook.jpg" alt="Facebook">
+			</aside>
 		</div>
-
-		
-
-		<aside class="social">
-			<h3>connect with me</h3>
-			<img class="github-img" src="assets/images/newGitHub-Mark.png" alt="Github">
-			<img class="2" src="assets/images/linkedin.png" alt="LinkedIn">
-			<img class="3" src="assets/images/facebook.jpg" alt="Facebook">
-
-		</aside>
-	
-	</div>
-		
 		<footer class="foot">
 			<p class="footer">&copy; copyright 2016 Nishtha Arora</p>
 		</footer>
-
-
-	
-
-</body>
+	</body>
 </html>
