php and composer files

--- a/main-page.html
+++ b/main-page.html
@@ -3,6 +3,8 @@
 <head>
 	<title>My First Homework</title>
 
+
+	<link rel= "stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
