--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,18 @@
 <head>
 	<title>My First Homework</title>
 
+	
+	<link rel= "stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	
 	<header class="header">
-		<h1 class="name"><a href="#">Nishtha Arora</a></h1>
+		<h1 class="name"><a href="main-page.html">Nishtha Arora</a></h1>
   	<div class="nav">
-		<a class="1" href="main-page.html" title="about me">About</a>
+		<a class="1" href="main-page.html">About</a>
 		<a class="2" href="portfolio.html" title="Portfolio">Portfolio</a>
-		<a class="3" href="#">Contact</a>	
+		<a class="3" href="#" title="contact">Contact</a>	
 	</div>
 	</header>
 
@@ -20,7 +22,7 @@
 
 		<div class="inner-box clearfix">
 	
-			<h2 class="bio">Contact</h2>
+			<h2 class="bio contact">Contact</h2>
 
 			<form>
 				
@@ -56,7 +58,7 @@
 			<h3>Connect with Me</h3>
 			<img class = "social-network" src="assets/images/newGitHub-Mark.png" alt="Github">
 			<img class = "social-network" src="assets/images/linkedin.png" alt="LinkedIn">
-			<img class = "social-network" src="assets/images/facebook.jpg" alt="Facebook">
+			<img class = "social-network" src="assets/images/overflow.png" alt="Facebook">
 
 		</aside>
 	
