--- a/main-page.html
+++ b/main-page.html
@@ -28,7 +28,8 @@
 			
 			
 			<p class="intro">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -40,9 +41,21 @@
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		
 
+			<br>
+			<br>
+			<br>
 
-
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			<br>
+			<br>
+			<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -51,20 +64,6 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
 		</div>
 
@@ -74,16 +73,18 @@
 			<h3>Connect with Me</h3>
 			<img class = "social-network" src="assets/images/newGitHub-Mark.png" alt="Github">
 			<img class = "social-network" src="assets/images/linkedin.png" alt="LinkedIn">
-			<img class = "social-network" src="assets/images/facebook.jpg" alt="Facebook">
+			<img class = "social-network" src="assets/images/overflow.png" alt="Facebook">
 
 		</aside>
 	
 	</div>
-		
+
+
+			
 		<footer class="foot">
 			<p class="footer">&copy; copyright 2016 Nishtha Arora</p>
 		</footer>
-
+		
 
 	
 
