--- a/portfolio.html
+++ b/portfolio.html
@@ -2,17 +2,20 @@
 <html>
 	<head>
 		<title>My First Homework</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	</head>
-	<body>
-		<header class="header">
-			<h1 class="name"><a href="#">Nishtha Arora</a></h1>
-			<div class="nav">
-				<a class="1" href="main-page.html" title="about me">About</a>
-				<a class="2" href="#">Portfolio</a>
-				<a class="3" href="contact.html" title="contact">Contact</a>
-			</div>
-		</header>
+	
+	<link rel= "stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+<body>
+	
+	<header class="header">
+		<h1 class="name"><a href="main-page.html">Nishtha Arora</a></h1>
+  	<div class="nav">
+		<a class="1" href="main-page.html">About</a>
+		<a class="2" href="#" title="Portfolio">Portfolio</a>
+		<a class="3" href="contact.html" title="contact">Contact</a>	
+	</div>
+	</header>
 		<div class="outer-box clearfix">
 			<div class="inner-box clearfix">
 				<h2 class="bio">Portfolio</h2>
@@ -39,12 +42,16 @@
 					</div>
 				</section>
 			</div>
-			<aside class="social">
-				<h3>Connect with Me</h3>
-				<img class = "social-network" src="assets/images/newGitHub-Mark.png" alt="Github">
-				<img class = "social-network" src="assets/images/linkedin.png" alt="LinkedIn">
-				<img class = "social-network" src="assets/images/facebook.jpg" alt="Facebook">
-			</aside>
+		 
+		 <aside class="social">
+			<h3>Connect with Me</h3>
+			<img class = "social-network" src="assets/images/newGitHub-Mark.png" alt="Github">
+			<img class = "social-network" src="assets/images/linkedin.png" alt="LinkedIn">
+			<img class = "social-network" src="assets/images/overflow.png" alt="Facebook">
+
+		 </aside>
+		
+
 		</div>
 		<footer class="foot">
 			<p class="footer">&copy; copyright 2016 Nishtha Arora</p>
